--- a/main.html
+++ b/main.html
@@ -117,7 +117,7 @@
                 if(ind>lines){
                     ind = 1;
                     console.log(a);
-                    console.log("lll");
+                    console.log("llll");
                     a = window.clearInterval(a);
                     document.getElementById(lines.toString()).style.backgroundColor="white";
                     return;
@@ -142,8 +142,7 @@
                 console.log("lines"+lines);
                 // var text3 = $("#c2").val(); 
                 a = self.setInterval("changecolor()",500);
-                console.log(a);
-                console.log("ind:"+ind);
+                console.log("a:"+a);
                 changecolor();
             }
         </script>
